fix preview show pre-wrap

--- a/app/assets/stylesheets/diaries.css.scss
+++ b/app/assets/stylesheets/diaries.css.scss
@@ -28,9 +28,9 @@ div.side>ul {
 }
 div.side>ul>li {
   background-color: white;
-  box-shadow: 0 2px 6px rgba(0,0,0, .1);
+  box-shadow: 5px 5px 6px rgba(0,0,0, .2);
   border-radius: 10px;
-  margin: 5px 5px;
+  margin: 10px 5px;
   padding: 5px 5px;
 }
 
